[package]
name = "shlang"
version = "0.1.0"
authors = ["Ivan Avdeev <me@w23.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mio = {version = "0.7", features = ["os-poll", "os-util", "udp"]}
log = "0.4"
pico-args = "0.3"
stderrlog = "0.4"
simple-error = "0.2"
circbuf = "0.1"
byteorder = "1"
thiserror = "1.0"
ranges = "0.3"

[dev-dependencies]
rand = {version = "0.7", features = ["small_rng"]}

[profile.release]
debug = true
